construction fix funding padding issue on mobile

--- a/src/visuals/2024-02-29-construction/ProjectsByFundingBar.css
+++ b/src/visuals/2024-02-29-construction/ProjectsByFundingBar.css
@@ -35,8 +35,7 @@
   color: rgb(145, 145, 145);
 }
 
-.fund-chart-div,
-.fund-data-note-div {
+.fund-chart-div {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
